@@ -1,4 +1,4 @@
-# $NetBSD: shl.mi,v 1.356 2024/07/09 13:29:02 rin Exp $
+# $NetBSD: shl.mi,v 1.357 2024/10/30 18:09:17 christos Exp $
 #
 # Note: don't delete entries from here - mark them as "obsolete" instead.
 #
@@ -296,6 +296,7 @@
 ./usr/lib/libzfs_core_pic.a			comp-zfs-piclib		compatfile,picinstall,zfs
 ./usr/lib/libzfs_pic.a				comp-zfs-piclib		compatfile,picinstall,zfs
 ./usr/lib/libzpool_pic.a			comp-zfs-piclib		compatfile,picinstall,zfs
+./usr/lib/libzstd_pic.a				comp-c-piclib		compatfile,picinstall
 ./usr/libexec/liblto_plugin.so			comp-c-bin              gcc
 ./usr/libexec/liblto_plugin.so.0		comp-c-bin              gcc
 ./usr/libexec/liblto_plugin.so.0.1		comp-c-bin              gcc
