@@ -1,11 +1,11 @@
-#	$NetBSD: Makefile,v 1.77 2024/09/23 13:00:30 christos Exp $
+#	$NetBSD: Makefile,v 1.78 2024/10/30 18:09:18 christos Exp $
 
 .include <bsd.own.mk>
 
 SUBDIR=	acpica am-utils bc byacc cron dhcpcd elftoolchain/common \
 	ekermit elftosb fetch file flex ${EXTERNAL_JEMALLOC_SUBDIR} less \
 	libarchive libevent libfido2 liblzf libpcap mdocml \
-	ntp openresolv tcpdump tmux top tre wpa
+	ntp openresolv tcpdump tmux top tre wpa zstd
 
 .if (${MKATF} != "no")
 SUBDIR+= atf
