@@ -1,4 +1,4 @@
-#	$NetBSD: Makefile.inc,v 1.7 2019/12/17 18:59:39 christos Exp $
+#	$NetBSD: Makefile.inc,v 1.8 2024/10/30 18:09:18 christos Exp $
 
 WARNS=4
 DIST=${NETBSDSRCDIR}/external/bsd/file/dist
@@ -23,6 +23,7 @@ CPPFLAGS+=	-I${.CURDIR}/../include -I${DIST}/src
 .PATH:		${DIST}/src ${DIST}/doc
 
 DPLIBS+=     lzma    ${NETBSDSRCDIR}/external/public-domain/xz/lib
+DPLIBS+=     zstd    ${NETBSDSRCDIR}/external/bsd/zstd/lib
 DPLIBS+=     bz2     ${NETBSDSRCDIR}/lib/libbz2
 DPLIBS+=     z       ${NETBSDSRCDIR}/lib/libz
 
