@@ -1,4 +1,4 @@
-#	$NetBSD: Makefile,v 1.1 2024/10/27 22:48:51 christos Exp $
+#	$NetBSD: Makefile,v 1.2 2024/10/30 18:09:18 christos Exp $
 
 .include <bsd.own.mk>
 
@@ -26,8 +26,12 @@ LDFLAGS+=-pthread
 PROGDPLIBS= zstd ${.CURDIR}/../lib
 SYMLINKS+=      ${BINDIR}/zstd ${BINDIR}/zstdcat
 SYMLINKS+=      ${BINDIR}/zstd ${BINDIR}/zstdmt
+SYMLINKS+=      ${BINDIR}/zstd ${BINDIR}/unzstd
 
 SCRIPTSDIR=	/usr/bin
 SCRIPTS=	zstdgrep zstdless
+
+MAN+=	zstdgrep.1 zstdless.1
+MLINKS+=  zstd.1 zstdmt.1 zstd.1 zstdcat.1 zstd.1 unzstd.1
 
 .include <bsd.prog.mk>
