@@ -1,4 +1,4 @@
-# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.3109 $>
+# LIST OF CHANGES FROM LAST RELEASE:			<$Revision: 1.3110 $>
 #
 #
 # [Note: This file does not mention every change made to the NetBSD source tree.
@@ -569,4 +569,5 @@ Changes from NetBSD 10.0 to NetBSD 11.0:
 		[skrll 20241023]
 	mdnsd(8), dns-sd(1), libdns_sd: import mDNSResponder 2559.1.1
 		[christos 20241026]
+	ztd(1): import 1-5.6 [christos 20241028]
 	tzdata: Updated to 2024b (using 2024bgtz) [kre 20241029]
